--- a/css/main.css
+++ b/css/main.css
@@ -297,6 +297,14 @@ section.main{
   letter-spacing: -0.08px; 
   color: #7A7D7E;
   font-family: IBMP-Regular; 
+} 
+.row-device .col-12{
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+.row-device.list-alt .col-12{
+  flex: 0 0 100%;
+  max-width: 100%;
 }
  
  
