--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,236 @@ section.main{
   padding-top: 32px; 
   background: #F5F5F5;
   min-height: calc(100vh - 80px);
+} 
+.subscription h1{
+  font-family: fengardo_regular; 
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 48px; 
+  text-align: center;
+  letter-spacing: 0.38px; 
+  color: #626262;
+  margin-bottom: 50px;
+}
+.subscription .package{
+  position: relative;
+  padding: 30px 16px;
+  gap: 16px;  
+  height: 203px;   
+  border: 1px solid #626262;
+}
+.subscription .justify-content-center > div:nth-child(1){ 
+  border-radius: 6px 0px 0px 6px;
+  border-right: 0px;
+}
+.subscription .justify-content-center > div:nth-child(3){ 
+  border-radius: 0px 6px  6px 0px ;
+  border-left: 0px;
+}
+.subscription .package.best-value{
+  border: 1px solid #39B24A;
+  height: 205px;  
+}
+.subscription .package.best-value .best{
+  height: 24px;  
+  background-color: #39B24A;
+  border-radius: 6px 6px 0px 0px;
+  position: absolute;
+  top: -24px;
+  width: 100%;
+  left: 0; 
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 26px; 
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase; 
+  color: #FFFFFF;
+}
+.subscription .package h3{ 
+  font-family: fengardo_regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px; 
+  text-align: center;
+  letter-spacing: 0.15px; 
+  color: #7A7D7E;
+}
+.subscription .package.best-value h3{  
+  color: #0E1318;
+} 
+.subscription .package h3 span{  
+  color: rgba(57, 178, 74, 0.5);
+}
+.subscription .package h2{ 
+  font-family: fengardo_regular;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 38px; 
+  text-align: center;
+  letter-spacing: 0.39px; 
+  color: #868C92; 
+  margin-bottom: 16px;
+}
+.subscription .package h2 span{ 
+  font-family: IBMP-Regular;
+  text-decoration: line-through; 
+  font-size: 16px;
+  line-height: 24px; 
+  text-align: center;
+  letter-spacing: -0.31px;
+  text-decoration-line: line-through; 
+  color: #DD6437;
+  padding-right: 15px;
+}
+.subscription .btn-buy{
+  padding: 9px 12px;
+  gap: 10px;  
+  height: 44px; 
+  border: 1px solid #39B24A;
+  border-radius: 4px;
+  width: 100%;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: -0.31px; 
+  color: #39B24A;
+  font-family: IBMP-Bold; 
+}
+.subscription .package.best-value .btn-buy{
+  background-color: #39B24A;
+  color: #fff;
+}
+.subscription > h2{
+  margin-top: 50px;
+  font-family: fengardo_regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px; 
+  text-align: center;
+  letter-spacing: 0.15px; 
+  color: #626262;
+  margin-bottom: 30px;
+}
+.subscription ul{
+  padding-left: 0px;
+  list-style: none;  
+}
+.subscription ul li{
+  padding-left: 0px;
+  list-style: none;  
+  padding-left: 28px;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: IBMP-Regular; 
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px; 
+  letter-spacing: -0.31px; 
+  color: #7A7D7E;
+}
+.subscription ul li::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 2px;
+  width: 24px;
+  height: 18px;
+  background: url(../images/Tick.png);
+  background-size: 24px 18px !important;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+}
+.subscription .img-fluid{
+  background: #D9D9D9;
+  border-radius: 6px;
+}
+.footer hr{
+  border-top: 1px solid #CED4DA;
+  margin-top: 24px;
+}
+.footer h6{
+  font-family: IBMP-Regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px; 
+  letter-spacing: -0.08px; 
+  color: #7A7D7E;
+}
+.footer a{  
+  text-decoration-line: underline;  
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12.8px;
+  line-height: 21px; 
+  letter-spacing: -0.08px; 
+  color: #7A7D7E;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+.footer span{   
+  font-family: IBMP-Regular; 
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px; 
+  letter-spacing: -0.08px; 
+  color: #7A7D7E; 
+  padding-left: 8px;
+  padding-right: 8px;
+  border-right: 1px solid #7A7D7E;
+} 
+.btn-user{
+  margin-top: -9px;
+  margin-left: 15px;
+  transition: .33s all ease-out; 
+  padding: 9px 12px;
+  gap: 6px;  
+  height: 44px; 
+  border: 1px solid #39B24A;
+  border-radius: 4px;
+  font-family: IBMP-Regular;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: -0.31px; 
+  color: #39B24A; 
+  display: inline-flex;
+}
+.btn-user:hover{
+  background-color: #39B24A;
+  color: #fff;
+}
+header .notifications{
+  position: relative;
+  font-size: 32px;
+  color: #7A7D7E; 
+  top: -10px; 
+  margin-left: 15px;
+  margin-right: 15px;
+}
+header .texts{
+  margin-top: -9px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;  
+  text-align: right;
+  letter-spacing: -0.08px; 
+  color: #7A7D7E; 
+}
+header .texts span{
+  font-size: 16px;
+  line-height: 26px; 
+  letter-spacing: -0.31px; 
+  color: #DD6437;
+
 }
 .device-detail h6{ 
   font-family: IBMP-Regular;
@@ -306,7 +536,6 @@ section.main{
   flex: 0 0 100%;
   max-width: 100%;
 }
- 
  
  
   
