--- a/css/main.css
+++ b/css/main.css
@@ -709,10 +709,289 @@ header .texts span{
 .list-alt .box-device .option h6{
   white-space: nowrap; 
 
+} 
+section.main-fluid{
+  padding: 111px 111px 55px 132px;
+  background: #fff;
+  min-height: calc(100vh - 80px); 
+}  
+.device-menu .nav .nav-link{
+  padding: 24px 16px;
+  gap: 16px;  
+  width: 100%;
+  height: 72px; 
+  border-bottom: 1px solid #C4C4C4;
+  border-radius: 0px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;  
+  letter-spacing: -0.45px; 
+  color: #39B24A; 
+  transition: .33s all ease-out; 
+  font-family: fengardo_regular;
 }
- 
-   
-
+.device-menu .nav .nav-link.active{
+  background: #39B24A;
+  color: #fff;
+}
+.device-menu .nav .nav-link.deactivate{ 
+  color: #E35D6A; 
+}
+.device-menu .nav .nav-link:hover{
+  background: #39B24A;
+  color: #fff;
+}
+.device-menu .lighting{
+  padding: 30px 16px 16px;
+  gap: 16px;  
+  background: #EAFFED;
+  border-bottom: 1px solid #C4C4C4;
+}
+.device-menu .lighting h4{
+  font-family: fengardo_regular; 
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 20px; 
+  letter-spacing: -0.45px; 
+  color: #212529;
+  margin-bottom: 18px;
+}
+.device-menu .lighting h6{
+  font-family: IBMP-Regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12.8px;
+  line-height: 21px; 
+  letter-spacing: -0.08px; 
+  color: #7A7D7E; 
+}
+.device-menu .lighting h6 span{
+  font-size: 16px; 
+  letter-spacing: -0.31px; 
+  color: #F43838;
+  padding-left: 10px;
+}
+.device-menu .lighting h6 i{
+  font-style: normal;
+  text-align: right;
+  float: right;
+}
+.all-back{
+  display: inline-flex;
+  padding: 20px;
+} 
+.all-back span{
+  font-size: 32px;
+  color: #DD6437;
+  margin-right: 16px;
+}
+.all-back p{
+  font-family: fengardo_regular; 
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px; 
+  letter-spacing: -0.45px; 
+  color: #B5BBC1;
+  margin-bottom: 0px;
+}
+.tab-pane h1{
+  margin-top: 15px;
+  font-family: fengardo_regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px; 
+  letter-spacing: 0.15px; 
+  color: #B5BBC1;
+  margin-bottom: 20px;
+}  
+.h3d{
+  padding: 8px 16px; 
+  height: 40px; 
+  background: #D8F3DC;
+  font-family: fengardo_regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px; 
+  letter-spacing: -0.45px; 
+  color: #095D14;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+.tab-pane p{
+  font-family: IBMP-Regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px; 
+  letter-spacing: -0.31px; 
+  color: #626262;
+}  
+.tab-pane h6.sunrise{
+  display: inline-flex;
+}
+.tab-pane h6.sunrise span{
+  font-size: 16px;
+  padding-right: 8px;
+  color: #DD6437;
+} 
+.tab-pane h6.sunrise p{ 
+  font-family: IBMP-Regular; 
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px; 
+  letter-spacing: -0.08px; 
+  color: #DD6437;
+  border-right: 1px solid #B5BBC1;
+  padding-right: 16px;
+  margin-right: 16px;
+}
+.tab-pane h6.sunset{
+  display: inline-flex;
+}
+.tab-pane h6.sunset span{
+  font-size: 16px;
+  padding-right: 8px;
+  color: #B5BBC1;
+} 
+.tab-pane h6.sunset p{ 
+  font-family: IBMP-Regular; 
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px; 
+  letter-spacing: -0.08px; 
+  color: #B5BBC1;
+}
+.tab-pane h2{
+  margin-top: 15px;
+  font-family: fengardo_regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: #B5BBC1;
+  margin-top: 10px;
+  margin-bottom: 16px;
+}  
+.tab-pane h3{
+  font-family: IBMP-Regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px; 
+  letter-spacing: -0.31px; 
+  color: #095D14;
+  margin-bottom: 16px;
+}  
+.tab-pane label{
+  font-family: IBMP-Regular; 
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: -0.31px; 
+  color: #B5BBC1;
+  margin-top: 10px;
+}  
+.tab-pane label.text-danger{
+  color: #C44D21;
+}  
+.bootstrap-select{
+  width: 100%; 
+} 
+.bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+  width: 100% !important;
+  height: 48px;  
+} 
+.bootstrap-select .dropdown-toggle::after { 
+  content: "";
+  border: none !important;
+  background: url(../images/keyboard_arrow_down.png);
+  width: 24px;
+  height: 24px;
+  margin-top: 0px;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 24px 24px !important;
+}
+.btn-light {  
+  background: #FFFFFF !important; 
+  border: 1px solid #CED4DA;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px; 
+  color: #626262;
+  font-family: IBMP-Regular;
+  height: 38px;
+  font-size: 12px;
+  line-height: 30px;
+}
+.bootstrap-select .dropdown-toggle .filter-option-inner-inner {
+  font-family: IBMP-Regular;
+}
+.custom-control-input:checked~.custom-control-label::before {
+  color: #fff;
+  border-color: #39B24A;
+  background-color: #39B24A;
+}
+.custom-control-label{
+  font-family: IBMP-Regular !important;  
+  font-size: 16px !important;
+  line-height: 26px; 
+  letter-spacing: -0.31px; 
+  color: #626262 !important; 
+} 
+.custom-control-label.text-danger{
+  color: #DC3545 !important;
+}
+.h3y{
+  padding: 8px 16px; 
+  height: 40px;  
+  font-family: fengardo_regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px; 
+  letter-spacing: -0.45px; 
+  color: #095D14;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  background: rgba(255, 193, 7, 0.5);
+}
+.tab-pane label .right a{
+  font-family: IBMP-Regular;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: -0.31px;
+  text-decoration-line: underline; 
+  color: #39B24A;
+  float: right;
+}  
+.btn-update{
+  padding: 9px 12px;
+  gap: 10px;  
+  height: 44px; 
+  border: 1px solid #39B24A;
+  border-radius: 4px;
+  width: 100%;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: -0.31px; 
+  color: #39B24A;
+  font-family: IBMP-Bold; 
+}
+.btn-update{
+  background-color: #39B24A;
+  color: #fff;
+}
 
 /* 
   transition: .33s all ease-out; 
